@@ -1,16 +1,15 @@
 package com.jiwon.mylog.domain.tag.service;
 
+import com.jiwon.mylog.domain.tag.repository.tag.TagJdbcRepository;
 import com.jiwon.mylog.global.common.entity.PageResponse;
 import com.jiwon.mylog.domain.tag.dto.request.TagRequest;
 import com.jiwon.mylog.domain.tag.dto.response.TagResponse;
 import com.jiwon.mylog.domain.tag.entity.Tag;
-import com.jiwon.mylog.domain.tag.repository.TagRepository;
+import com.jiwon.mylog.domain.tag.repository.tag.TagRepository;
 import com.jiwon.mylog.domain.user.entity.User;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -20,6 +19,7 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 public class TagService {
 
+    private final TagJdbcRepository tagJdbcRepository;
     private final TagRepository tagRepository;
 
     @Transactional(readOnly = true)
@@ -36,39 +36,18 @@ public class TagService {
     }
 
     @Transactional
-    public List<Tag> getTagsById(User user, List<TagRequest> tagRequests) {
-
+    public List<Tag> getOrCreateTags(User user, List<TagRequest> tagRequests) {
         List<String> names = tagRequests.stream()
                 .map(TagRequest::getName)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        // 이미 존재하는 태그
-        List<Tag> existingTags = tagRepository.findAllByUserAndNameIn(user, names);
+        List<Tag> tags = names.stream()
+                .map(name -> Tag.create(user, name))
+                .toList();
 
-        List<String> existNames = existingTags.stream()
-                .map(Tag::getName)
-                .collect(Collectors.toList());
+        tagJdbcRepository.upsert(tags);
 
-        // 새로운 태그
-        List<Tag> createdTags = names.stream()
-                .filter(name -> !existNames.contains(name))
-                .map(name -> createTag(user, name))
-                .collect(Collectors.toList());
-
-        tagRepository.saveAll(createdTags);
-
-        return Stream.of(existingTags, createdTags)
-                .flatMap(Collection::stream)
-                .collect(Collectors.toList());
-    }
-
-    private Tag createTag(User user, String tagName) {
-        Tag tag = Tag.builder()
-                .name(tagName)
-                .usageCount(0L)
-                .user(user)
-                .build();
-        return tag;
+        return tagRepository.findAllByUserAndNameIn(user, names);
     }
 }
